--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -53,7 +53,7 @@
 
 <div class="form-group row">
     <label for="alternateName[ja]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        サイト管理用券種名<span class="text-danger">＊</span>
+        代替名称<span class="text-danger">＊</span>
     </label>
     <div class="col-md-8">
         <input type="text" class="form-control" name="alternateName[ja]" id="alternateName[ja]" placeholder=""
