--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -8,7 +8,7 @@
             href="/creativeWorks/movie/add">作品登録</a>
 
         <a class="list-group-item list-group-item-action <%= (displayId === 'Aa-10') ? 'active': ''; %>"
-            href="/creativeWorks/movie">映画作品検索</a>
+            href="/creativeWorks/movie">作品検索</a>
 
         <a class="list-group-item list-group-item-action <%= (displayId === 'Aa-2') ? 'active': ''; %>"
             href="/events/screeningEventSeries/add">劇場上映作品登録</a>
