--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -19,7 +19,8 @@
         サブタイトル
     </label>
     <div class="col-md-8">
-        <input class="form-control" name="headline" id="headline" placeholder="" maxlength=64 value="<%= forms.headline %>">
+        <input class="form-control" name="headline" id="headline" placeholder="" maxlength=64
+            value="<%= forms.headline %>">
         <p class="message">
             全角64文字以内でご入力ください。
         </p>
@@ -82,7 +83,8 @@
         公開日
     </label>
     <div class="col-md-8">
-        <input class="form-control datepicker" name="datePublished" autocomplete="off" id="datePublished" value="<%= forms.datePublished %>">
+        <input class="form-control datepicker" name="datePublished" autocomplete="off" id="datePublished"
+            value="<%= forms.datePublished %>">
     </div>
 </div>
 <div class="form-group row">
@@ -90,7 +92,31 @@
         興行終了予定日
     </label>
     <div class="col-md-8">
-        <input class="form-control datepicker" name="offers[availabilityEnds]" autocomplete="off" id="offers[availabilityEnds]"
+        <input class="form-control datepicker" name="offers[availabilityEnds]" autocomplete="off"
+            id="offers[availabilityEnds]"
             value="<%= (forms.offers !== undefined) ? forms.offers.availabilityEnds : '' %>">
+    </div>
+</div>
+
+<div class="form-group row">
+    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        追加特性
+    </label>
+    <div class="col-sm-8">
+        <% forms.additionalProperty.forEach((_, key) => { %>
+        <div class="input-group mb-1">
+            <!-- <span class="input-group-addon">Name:Value</span> -->
+            <input class="form-control" name="additionalProperty[<%= key %>][name]"
+                id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
+                value="<%= forms.additionalProperty[key].name %>">
+
+            <input class="form-control" name="additionalProperty[<%= key %>][value]"
+                id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+                value="<%= forms.additionalProperty[key].value %>">
+        </div>
+        <% }) %>
+        <p class="message"></p>
+        <p class="error message text-danger">
+        </p>
     </div>
 </div>
