--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -70,24 +70,6 @@
 </div>
 
 <div class="form-group row">
-    <label for="nameForPrinting" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        印刷用券種名<span class="text-danger">＊</span>
-    </label>
-    <div class="col-md-8">
-        <input type="text" class="form-control" name="nameForPrinting" id="nameForPrinting" placeholder="" maxlength=30
-            value="<%= forms.nameForPrinting %>">
-        <p class="message">
-            全角30文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.nameForPrinting) { %>
-            <%- errors.nameForPrinting.msg %>
-            <% } %>
-        </p>
-    </div>
-</div>
-
-<div class="form-group row">
     <label for="price" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         発生金額<span class="text-danger">＊</span>
     </label>
@@ -309,6 +291,29 @@
             <% if (errors && errors.accountTitle) { %>
             <%- errors.accountTitle.msg %>
             <% } %>
+        </p>
+    </div>
+</div>
+
+<div class="form-group row">
+    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        追加特性
+    </label>
+    <div class="col-sm-8">
+        <% forms.additionalProperty.forEach((_, key) => { %>
+        <div class="input-group mb-1">
+            <!-- <span class="input-group-addon">Name:Value</span> -->
+            <input class="form-control" name="additionalProperty[<%= key %>][name]"
+                id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
+                value="<%= forms.additionalProperty[key].name %>">
+
+            <input class="form-control" name="additionalProperty[<%= key %>][value]"
+                id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+                value="<%= forms.additionalProperty[key].value %>">
+        </div>
+        <% }) %>
+        <p class="message"></p>
+        <p class="error message text-danger">
         </p>
     </div>
 </div>
