### Changed - 各リソースに追加特性を追加

--- a/views/accountTitles/accountTitleSet/index.ejs
+++ b/views/accountTitles/accountTitleSet/index.ejs
@@ -96,7 +96,7 @@ AT-06
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title">細目の追加項目</h4>
+                <h4 class="modal-title">細目の追加特性</h4>
             </div>
             <div class="modal-body">
             </div>
