--- a/views/accountTitles/form.ejs
+++ b/views/accountTitles/form.ejs
@@ -60,7 +60,7 @@
 
 <div class="form-group row">
     <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        追加項目<font color="red">＊</font>
+        追加特性<font color="red">＊</font>
     </label>
     <div class="col-sm-8">
         <% forms.additionalProperty.forEach(function (_, key) { %>
