--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -103,7 +103,7 @@ AT-01
                     <td name="inCodeSet.inDefinedTermSet.name">$inCodeSet.inDefinedTermSet.name$</td>
                     <td name="" class="center">
                         <a href="#" class="btn btn-sm btn-primary showAdditionalProperty" data-codeValue="$codeValue$">
-                            <span>追加項目を見る</span>
+                            <span>追加特性を見る</span>
                         </a>
                     </td>
                 </tr>
@@ -118,7 +118,7 @@ AT-01
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title">細目の追加項目</h4>
+                <h4 class="modal-title">細目の追加特性</h4>
             </div>
             <div class="modal-body">
             </div>
