--- a/views/accountTitles/accountTitleCategory/index.ejs
+++ b/views/accountTitles/accountTitleCategory/index.ejs
@@ -70,7 +70,7 @@ AT-05
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title">細目の追加項目</h4>
+                <h4 class="modal-title">細目の追加特性</h4>
             </div>
             <div class="modal-body">
             </div>
