--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -96,12 +96,19 @@ Aa-10
                     <td name="contentRating" class="text-left">$contentRating$</td>
                     <td name="dayPublished__dayAvailabilityEnds" class="text-left">
                         $dayPublished$<br>$dayAvailabilityEnds$</td>
-                    <td name="edit" class="center">
-                        <div class="btn-area text-center">
+                    <td name="identifier__edit">
+                        <div class="text-center">
                             <button type="button" class="btn btn-primary btn-list edit btn-sm" data-toggle="modal"
                                 data-target="#myModal">
                                 <i class="fas fa-edit"></i>
                             </button>
+                        </div>
+
+                        <div class="text-center mt-2">
+                            <a href="#" class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                                data-identifier="$identifier$">
+                                <span>追加特性</span>
+                            </a>
                         </div>
                     </td>
                 </tr>
@@ -110,4 +117,21 @@ Aa-10
     </div>
     <div id="pager" class="div_pager_parent"></div>
 </div>
+
+<div class="modal fade" id="modal-additionalProperty" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+                <h4 class="modal-title">細目の追加特性</h4>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <%- include('../../common/master/_loading') %>
