### Changed - 各リソースに追加特性を追加

--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -102,8 +102,9 @@ AT-01
                     <td name="inCodeSet.inDefinedTermSet.termCode">$inCodeSet.inDefinedTermSet.termCode$</td>
                     <td name="inCodeSet.inDefinedTermSet.name">$inCodeSet.inDefinedTermSet.name$</td>
                     <td name="" class="center">
-                        <a href="#" class="btn btn-sm btn-primary showAdditionalProperty" data-codeValue="$codeValue$">
-                            <span>追加特性を見る</span>
+                        <a href="javascript:void(0)" class="btn btn-sm btn-primary showAdditionalProperty"
+                            data-codeValue="$codeValue$">
+                            <span>追加特性</span>
                         </a>
                     </td>
                 </tr>
