--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -70,7 +70,7 @@ Aa-12
                     </td>
                     <td name="branchCode" class="">
                         <div class="text-center">
-                            <a href="#" class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
                                 data-branchCode="$branchCode$">
                                 <span>追加特性</span>
                             </a>
@@ -88,7 +88,7 @@ Aa-12
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title">細目の追加特性</h4>
+                <h4 class="modal-title">劇場の追加特性</h4>
             </div>
             <div class="modal-body">
             </div>
