--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -105,7 +105,7 @@ Aa-10
                         </div>
 
                         <div class="text-center mt-2">
-                            <a href="#" class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
                                 data-identifier="$identifier$">
                                 <span>追加特性</span>
                             </a>
@@ -123,7 +123,7 @@ Aa-10
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title">細目の追加特性</h4>
+                <h4 class="modal-title">作品の追加特性</h4>
             </div>
             <div class="modal-body">
             </div>
