### Changed - 各リソースに追加特性を追加

--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -140,7 +140,7 @@ Aa-6
                         </div>
 
                         <div class="text-center mt-2">
-                            <a href="#" data-id="$id$" class="btn btn-sm btn-primary popupListTicketTypeGroup">
+                            <a href="#" data-id="$id$" class="btn btn-sm btn-outline-primary popupListTicketTypeGroup">
                                 関連券種<br>グループ
                             </a>
                         </div>
