--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -61,7 +61,6 @@ Aa-8
                     <th>券種グループ名</th>
                     <th>興行区分コード</th>
                     <th></th>
-                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -69,16 +68,16 @@ Aa-8
                     <td name="ticketGroupCode">$ticketGroupCode$</td>
                     <td name="name.ja">$name.ja$</td>
                     <td name="itemOffered.serviceType.id">$itemOffered.serviceType.id$</td>
-                    <td name="edit" class="center">
-                        <div class="btn-area text-center">
-                            <a class="btn btn-primary btn-list edit" href="/ticketTypeGroups/$id$/update">
+                    <td name="id__id" class="center">
+                        <div class="text-center">
+                            <a target="_blank" class="btn btn-primary" href="/ticketTypeGroups/$id$/update">
                                 <i class="fas fa-edit"></i>
                             </a>
                         </div>
-                    </td>
-                    <td name="popup" class="center popupListTicketType">
-                        <div class="btn-area text-center">
-                            <a href="/ticketTypeGroups/ticketTypeList?id=$id$" class="btn btn-primary btn-list edit">
+
+                        <div class="text-center mt-2">
+                            <a href="javascript:void(0)" class="btn btn-outline-primary popupListTicketType"
+                                data-id="$id$">
                                 <span>関連券種</span>
                             </a>
                         </div>
