### Changed - 検索ページのボタン調整

--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -109,12 +109,14 @@ Aa-3
                         <br>$dubLanguage$
                         <br>$videoFormat$
                     </td>
-                    <td name="id__edit" class="center">
-                        <div class="btn-area text-center">
-                            <button type="button" class="btn btn-primary btn-list edit" data-toggle="modal"
-                                data-target="#myModal">
-                                <i class="fas fa-edit"></i>
-                            </button>
+                    <td name="id__id" class="center">
+                        <div class="text-center">
+                            <div class="text-center">
+                                <a target="_blank" class="btn btn-primary"
+                                    href="/events/screeningEventSeries/$id$/update">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="text-center mt-2">
