--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -67,14 +67,13 @@ Aa-17
                 <tr id="templateRow" identifier="$identifier$">
                     <td name="id">$id$</td>
                     <td name="name">
-                        $name$<br />
+                        $name$
                     </td>
-                    <td name="edit" class="center">
-                        <div class="btn-area">
-                            <button type="button" class="btn btn-list btn-primary edit" data-toggle="modal"
-                                data-target="#myModal">
+                    <td name="edit__id">
+                        <div class="text-center">
+                            <a target="_blank" class="btn btn-primary" href="/serviceTypes/$id$/update">
                                 <i class="fas fa-edit"></i>
-                            </button>
+                            </a>
                         </div>
                     </td>
                 </tr>
