--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -96,12 +96,11 @@ Aa-10
                     <td name="contentRating" class="text-left">$contentRating$</td>
                     <td name="dayPublished__dayAvailabilityEnds" class="text-left">
                         $dayPublished$<br>$dayAvailabilityEnds$</td>
-                    <td name="identifier__edit">
+                    <td name="identifier__identifier">
                         <div class="text-center">
-                            <button type="button" class="btn btn-primary btn-list edit btn-sm" data-toggle="modal"
-                                data-target="#myModal">
+                            <a target="_blank" class="btn btn-primary" href="/creativeWorks/movie/$identifier$/update">
                                 <i class="fas fa-edit"></i>
-                            </button>
+                            </a>
                         </div>
 
                         <div class="text-center mt-2">
