--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -101,11 +101,13 @@ AT-01
                     <td name="name">$name$</td>
                     <td name="inCodeSet.inDefinedTermSet.termCode">$inCodeSet.inDefinedTermSet.termCode$</td>
                     <td name="inCodeSet.inDefinedTermSet.name">$inCodeSet.inDefinedTermSet.name$</td>
-                    <td name="" class="center">
-                        <a href="javascript:void(0)" class="btn btn-sm btn-primary showAdditionalProperty"
-                            data-codeValue="$codeValue$">
-                            <span>追加特性</span>
-                        </a>
+                    <td name="edit__codeValue">
+                        <div class="text-center mt-2">
+                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                                data-codeValue="$codeValue$">
+                                <span>追加特性</span>
+                            </a>
+                        </div>
                     </td>
                 </tr>
             </tbody>
