--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -69,10 +69,17 @@ Aa-17
                     <td name="name">
                         $name$
                     </td>
-                    <td name="edit__id">
+                    <td name="edit__id__id">
                         <div class="text-center">
                             <a target="_blank" class="btn btn-primary" href="/serviceTypes/$id$/update">
                                 <i class="fas fa-edit"></i>
+                            </a>
+                        </div>
+
+                        <div class="text-center mt-2">
+                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                                data-id="$id$">
+                                <span>追加特性</span>
                             </a>
                         </div>
                     </td>
@@ -81,6 +88,22 @@ Aa-17
         </table>
     </div>
     <div id="pager" class="div_pager_parent"></div>
+</div>
+
+<div class="modal fade" id="modal-additionalProperty" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+                <h4 class="modal-title">興行区分の追加特性</h4>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <%- include('../common/master/_loading') %>
