--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -68,7 +68,7 @@ Aa-8
                     <td name="ticketGroupCode">$ticketGroupCode$</td>
                     <td name="name.ja">$name.ja$</td>
                     <td name="itemOffered.serviceType.id">$itemOffered.serviceType.id$</td>
-                    <td name="id__id" class="center">
+                    <td name="id__id__id" class="center">
                         <div class="text-center">
                             <a target="_blank" class="btn btn-primary" href="/ticketTypeGroups/$id$/update">
                                 <i class="fas fa-edit"></i>
@@ -81,6 +81,13 @@ Aa-8
                                 <span>関連券種</span>
                             </a>
                         </div>
+
+                        <div class="text-center mt-2">
+                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                                data-id="$id$">
+                                <span>追加特性</span>
+                            </a>
+                        </div>
                     </td>
                 </tr>
             </tbody>
@@ -88,6 +95,23 @@ Aa-8
     </div>
     <div id="pager" class="div_pager_parent"></div>
 </div>
+
+<div class="modal fade" id="modal-additionalProperty" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+                <h4 class="modal-title">券種グループの追加特性</h4>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <%- include('_listTicketTypes') %>
-<% /* 共通Loading */ %>
+
 <%- include('../common/master/_loading') %>
