### Changed - 各リソースに追加特性を追加

--- a/views/accountTitles/accountTitleCategory/index.ejs
+++ b/views/accountTitles/accountTitleCategory/index.ejs
@@ -56,7 +56,8 @@ AT-05
             </thead>
             <tbody>
                 <tr id="templateRow">
-                    <td name="codeValue"><a class="editAccountTitleCategory" href="#">$codeValue$</a></td>
+                    <td name="codeValue"><a class="editAccountTitleCategory" href="javascript:void(0)">$codeValue$</a>
+                    </td>
                     <td name="name">$name$</td>
                 </tr>
             </tbody>
