--- a/views/accountTitles/accountTitleSet/index.ejs
+++ b/views/accountTitles/accountTitleSet/index.ejs
@@ -77,9 +77,9 @@ AT-06
             <tbody>
                 <tr id="templateRow">
                     <td name="inCodeSet.codeValue"><a class="editAccountTitleCategory"
-                            href="#">$inCodeSet.codeValue$</a></td>
+                            href="javascript:void(0)">$inCodeSet.codeValue$</a></td>
                     <td name="inCodeSet.name">$inCodeSet.name$</td>
-                    <td name="codeValue"><a class="editAccountTitleSet" href="#">$codeValue$</a>
+                    <td name="codeValue"><a class="editAccountTitleSet" href="javascript:void(0)">$codeValue$</a>
                     </td>
                     <td name="name">$name$</td>
                     <td name="inDefinedTermSet.termCode">$inDefinedTermSet.termCode$</td>
