--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -112,7 +112,7 @@ Aa-3
                     <td name="id__id" class="center">
                         <div class="text-center">
                             <div class="text-center">
-                                <a target="_blank" class="btn btn-primary"
+                                <a target="_blank" class="btn btn-sm btn-primary"
                                     href="/events/screeningEventSeries/$id$/update">
                                     <i class="fas fa-edit"></i>
                                 </a>
