--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -71,7 +71,7 @@ Aa-17
                     </td>
                     <td name="edit__id__id">
                         <div class="text-center">
-                            <a target="_blank" class="btn btn-primary" href="/serviceTypes/$id$/update">
+                            <a target="_blank" class="btn btn-sm btn-primary" href="/serviceTypes/$id$/update">
                                 <i class="fas fa-edit"></i>
                             </a>
                         </div>
