--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -70,13 +70,14 @@ Aa-8
                     <td name="itemOffered.serviceType.id">$itemOffered.serviceType.id$</td>
                     <td name="id__id__id" class="center">
                         <div class="text-center">
-                            <a target="_blank" class="btn btn-primary" href="/ticketTypeGroups/$id$/update">
+                            <a target="_blank" class="btn btn-sm btn-sm btn-primary"
+                                href="/ticketTypeGroups/$id$/update">
                                 <i class="fas fa-edit"></i>
                             </a>
                         </div>
 
                         <div class="text-center mt-2">
-                            <a href="javascript:void(0)" class="btn btn-outline-primary popupListTicketType"
+                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary popupListTicketType"
                                 data-id="$id$">
                                 <span>関連券種</span>
                             </a>
