--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -91,13 +91,16 @@ AT-01
             </thead>
             <tbody>
                 <tr id="templateRow" codeValue="$codeValue$">
-                    <td name="inCodeSet.inCodeSet.codeValue"><a class="editAccountTitleCategory"
-                            href="#">$inCodeSet.inCodeSet.codeValue$</a></td>
+                    <td name="inCodeSet.inCodeSet.codeValue">
+                        <a class="editAccountTitleCategory"
+                            href="javascript:void(0)">$inCodeSet.inCodeSet.codeValue$</a>
+                    </td>
                     <td name="inCodeSet.inCodeSet.name">$inCodeSet.inCodeSet.name$</td>
-                    <td name="inCodeSet.codeValue"><a class="editAccountTitleSet" href="#">$inCodeSet.codeValue$</a>
+                    <td name="inCodeSet.codeValue">
+                        <a class="editAccountTitleSet" href="javascript:void(0)">$inCodeSet.codeValue$</a>
                     </td>
                     <td name="inCodeSet.name">$inCodeSet.name$</td>
-                    <td name="codeValue"><a class="editAccountTitle" href="#">$codeValue$</a></td>
+                    <td name="codeValue"><a class="editAccountTitle" href="javascript:void(0)">$codeValue$</a></td>
                     <td name="name">$name$</td>
                     <td name="inCodeSet.inDefinedTermSet.termCode">$inCodeSet.inDefinedTermSet.termCode$</td>
                     <td name="inCodeSet.inDefinedTermSet.name">$inCodeSet.inDefinedTermSet.name$</td>
