--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -98,7 +98,8 @@ Aa-10
                         $dayPublished$<br>$dayAvailabilityEnds$</td>
                     <td name="identifier__identifier">
                         <div class="text-center">
-                            <a target="_blank" class="btn btn-primary" href="/creativeWorks/movie/$identifier$/update">
+                            <a target="_blank" class="btn btn-sm btn-primary"
+                                href="/creativeWorks/movie/$identifier$/update">
                                 <i class="fas fa-edit"></i>
                             </a>
                         </div>
