--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -134,13 +134,14 @@ Aa-6
                     </td>
                     <td name="id__id__id" class="center">
                         <div class="text-center">
-                            <a target="_blank" class="btn btn-primary" href="/ticketTypes/$id$/update">
+                            <a target="_blank" class="btn btn-sm btn-primary" href="/ticketTypes/$id$/update">
                                 <i class="fas fa-edit"></i>
                             </a>
                         </div>
 
                         <div class="text-center mt-2">
-                            <a href="#" data-id="$id$" class="btn btn-sm btn-outline-primary popupListTicketTypeGroup">
+                            <a href="javascript:void(0)" data-id="$id$"
+                                class="btn btn-sm btn-outline-primary popupListTicketTypeGroup">
                                 関連券種<br>グループ
                             </a>
                         </div>
