--- a/views/ticketTypeGroup/form.ejs
+++ b/views/ticketTypeGroup/form.ejs
@@ -3,7 +3,8 @@
         券種グループ名<span class="text-danger">＊</span>
     </label>
     <div class="col-md-8">
-        <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64 value="<%= forms.name.ja %>">
+        <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+            value="<%= forms.name.ja %>">
         <p class="message">
             全角64文字以内でご入力ください。
         </p>
@@ -19,7 +20,8 @@
         券種グループ名英<span class="text-danger">＊</span>
     </label>
     <div class="col-md-8">
-        <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64 value="<%= forms.name.en %>">
+        <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
+            value="<%= forms.name.en %>">
         <p class="message">
         </p>
         <p class="error message text-danger">
@@ -54,7 +56,8 @@
         </ul>
         <ul id="sortable2" class="connectedSortable">
             <% ticketTypes.forEach((ticketType) => { %>
-            <li class="ui-state-highlight" uid="<%= ticketType.id %>" appliesToMovieTicketType="<%= ticketType.priceSpecification.appliesToMovieTicketType %>"
+            <li class="ui-state-highlight" uid="<%= ticketType.id %>"
+                appliesToMovieTicketType="<%= ticketType.priceSpecification.appliesToMovieTicketType %>"
                 accountsReceivable="<%= ticketType.priceSpecification.accounting.accountsReceivable %>">
                 <%= ticketType.alternateName.ja %>
                 <%= `(${Math.floor(ticketType.priceSpecification.price / ticketType.priceSpecification.referenceQuantity.value)})` %>
@@ -119,6 +122,29 @@
             <% if (errors && errors.serviceType) { %>
             <%- errors.serviceType.msg %>
             <% } %>
+        </p>
+    </div>
+</div>
+
+<div class="form-group row">
+    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        追加特性
+    </label>
+    <div class="col-sm-8">
+        <% forms.additionalProperty.forEach((_, key) => { %>
+        <div class="input-group mb-1">
+            <!-- <span class="input-group-addon">Name:Value</span> -->
+            <input class="form-control" name="additionalProperty[<%= key %>][name]"
+                id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
+                value="<%= forms.additionalProperty[key].name %>">
+
+            <input class="form-control" name="additionalProperty[<%= key %>][value]"
+                id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+                value="<%= forms.additionalProperty[key].value %>">
+        </div>
+        <% }) %>
+        <p class="message"></p>
+        <p class="error message text-danger">
         </p>
     </div>
 </div>
